# Space4x

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: dev.rs  editor.rs  main.rs
client/src/module_bindings/: advance_days_reducer.rs  advance_ticks_reducer.rs  block_type_type.rs  combat_event_table.rs  combat_event_type.rs  commit_design_reducer.rs  create_draft_reducer.rs  create_faction_reducer.rs  faction_table.rs  faction_type.rs  fleet_ship_table.rs  fleet_ship_type.rs  fleet_table.rs  fleet_type.rs  game_state_table.rs  game_state_type.rs  mod.rs  order_build_ship_reducer.rs  order_move_fleet_reducer.rs  order_status_type.rs  order_type.rs  order_type_type.rs  orders_table.rs  place_block_reducer.rs  planet_table.rs  planet_type.rs  player_account_table.rs  player_account_type.rs  remove_block_reducer.rs  ship_design_block_table.rs  ship_design_block_type.rs  ship_design_draft_block_table.rs  ship_design_draft_block_type.rs  ship_design_draft_table.rs  ship_design_draft_type.rs  ship_design_table.rs  ship_design_type.rs  ship_table.rs  ship_type.rs  sim_run_table.rs  (+5 more)
docs/: TDD.md
scripts/: gen-bindings.sh  publish-local.sh  start-local.sh
server/: Cargo.toml
server/src/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: main.rs
