[workspace]
resolver = "2"
members = ["client", "server"]
# The server is a wasm-only SpacetimeDB module; keep it out of the default
# host build so `cargo build` / CI stay green. Build it for wasm explicitly
# via `spacetime build -p server` (see scripts/ and README).
default-members = ["client"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
