[package]
name = "starframe-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Starframe (Space4x) desktop client — eframe/egui scaffold"

[dependencies]
eframe = "0.34"
spacetimedb-sdk = "2.3.0"
starframe-shared = { path = "../shared" }
wgpu = "29"
egui-wgpu = "0.34"
glam = "0.33"
bytemuck = { version = "1", features = ["derive"] }
